--- a/style.css
+++ b/style.css
@@ -216,13 +216,53 @@ border-radius: 8px;
 background: rgb(255, 194, 57);
 margin-top: 24px;
 }
+.vision-btn{
+  color: rgb(255, 255, 255);
+font-family: Fira Sans;
+font-size: 16px;
+font-weight: 600;
+line-height: 19px;
+letter-spacing: 0%;
+}
+/* BD Adviser */
+.BD-adviser{
+  width: 1280px;
+height: 256px;
+  padding: 48px 24px 48px 24px;
+border: 1px solid rgba(14, 14, 14, 0.15);
+border-radius: 16px;
+background: rgb(255, 255, 255);
+  background-image: url(./assets/quote-bg.png);
+background-repeat: no-repeat;
+background-position: 25px 25px;
+}
 
+.adviser-name{
+  color: rgba(14, 14, 14, 0.8);
+font-family: Fira Sans;
+font-size: 20px;
+font-weight: 600;
+line-height: 24px;
+letter-spacing: 0%;
+text-align: left;
+}
+.adviser-desc{
+  color: rgba(7, 7, 7, 0.6);
+font-family: Fira Sans;
+font-size: 16px;
+font-weight: 400;
+line-height: 24px;
+letter-spacing: 0%;
+}
+.adviser-position{
+  color: rgba(14, 14, 14, 0.6);
+font-family: Fira Sans;
+font-size: 16px;
+font-weight: 400;
+line-height: 24px;
+letter-spacing: 0%;
 
-
-
-
-
-
+}
 
 
 
