--- a/style.css
+++ b/style.css
@@ -341,14 +341,69 @@ font-weight: 500;
 line-height: 19px;
 letter-spacing: 0%;
 }
+.news-head{
+  margin-top: 80px;
+  color: rgb(14, 14, 14);
+font-size: 40px;
+font-weight: 700;
+line-height: 48px;
+letter-spacing: 0%;
+}
+.news-desc{
+  margin-top: 24px;
+  color: rgba(14, 14, 14, 0.7);
+font-size: 16px;
+font-weight: 400;
+line-height: 24px;
+letter-spacing: 0%;
+}
 
 
+.news-portal{
+  margin-top: 32px;
+padding: 32px;
+  display: flex;
+gap: 24px;
+  width: 1280px;
+height: 402px;
+border-radius: 24px;
 
+background: rgb(255, 255, 255);
+}
+.news-img{
+  width: 408px;
+height: 306px;
+border-radius: 24px;
+background: url(image);
+}
+.news-content{
+  width: 744px;
+height: 290px;
+margin-top: 32px;
 
-
-
-
-
+}
+.read-btn{
+  width: 139px;
+height: 48px;
+border: none;
+border-radius: 8px;
+background: rgb(0, 106, 80);
+}
+.read-btn{
+color: rgb(255, 255, 255);
+font-family: Fira Sans;
+font-size: 18px;
+font-weight: 600;
+line-height: 22px;
+letter-spacing: 0%;
+margin-top: 10px;
+}
+.post-date{
+  margin: 10px 0;
+}
+.news-logo{
+  margin: 10px 0;
+}
 
 
 
